<resources>
    <string name="app_name">SwapiAssessment</string>
    <string name="person_name_label">FirstName LastName</string>
    <string name="person_height_label">Height cm</string>
    <string name="person_mass_label">Mass kg</string>
    <string name="person_birthyear_label">Born Year</string>
    <!--  Font requires lowercase i to display capital I for some reason.  -->
    <string name="tool_bar_title">Star Wars APi</string>
    <string name="play_button_content_description">Play Button</string>
    <string name="pause_button_content_description">Pause Button</string>
</resources>